--- a/www/styles.css
+++ b/www/styles.css
@@ -19,6 +19,14 @@ body, label, input, button, select {
 }
 h1, h2, h3, h4 { font-weight: 400; }
 
+/* Change Tract Count Text */
+#tractCount{color: red;
+       font-size: 16px;
+       font-weight: bold;
+       font-style: italic;
+}
+                                 
+                                 
 #controls {
   /* Appearance */
   background-color: white;
